<resources>
    <string name="app_name">YelpProject</string>
    <string name="image">Image</string>
    <string name="title_activity_scrolling_details">ScrollingActivityDetails</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="InfoTextView">Info</string>
    <string name="scheduleTextView">Schedule</string>
    <string name="phone">Phone</string>
    <string name="TODO">TODO</string>
    <string name="BulletPoint">●</string>
    <string name="reviews">Reviews</string>
    <string name="url">URL</string>
    <string name="points">:</string>
    <string name="NO_INFO">😵‍💫</string>
    <string name="NEXT_DAY">(NextDay)</string>
</resources>