<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RatingBar
        android:id="@+id/ratingDetailBar"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:numStars="5"
        android:progressTint="@color/teal_200"
        android:rating="3.5"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reviewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:text="5436" />

    <TextView
        android:id="@+id/detailPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ratingDetailBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingDetailBar"
        tools:text=" $$$ " />

    <TextView
        android:id="@+id/detailCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/detailPrice"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/detailPrice"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Category" />

    <TextView
        android:id="@+id/statusDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/detailPrice"
        app:layout_constraintTop_toBottomOf="@+id/detailPrice"
        tools:text="Open" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusDetail" />


    <TextView
        android:id="@+id/Info"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/InfoTextView"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/statusDetail"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

    <TextView
        android:id="@+id/schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scheduleTextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Info"
        app:layout_constraintTop_toBottomOf="@+id/Info" />

    <TextView
        android:id="@+id/detailHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/schedule"
        app:layout_constraintTop_toBottomOf="@+id/schedule"
        tools:text="10:00 - 2:00" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp"
        app:layout_constraintStart_toStartOf="@+id/detailHours"
        app:layout_constraintTop_toBottomOf="@+id/detailHours" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/detailHours"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

    <TextView
        android:id="@+id/phoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        tools:text="453762190" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider3"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNum" />

    <ImageView
        android:id="@+id/imageMap"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/TODO"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider3"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/phoneNum"
        app:layout_constraintTop_toBottomOf="@+id/imageMap"
        tools:text="Calle Alcarria  , 82 " />

    <TextView
        android:id="@+id/zipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:text="28915 , Madrid" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zipCode"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/BulletPoint"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/ratingDetailBar"
        app:layout_constraintStart_toEndOf="@+id/ratingDetailBar"
        app:layout_constraintTop_toTopOf="@+id/ratingDetailBar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/BulletPoint"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/BulletPoint"
        android:textColor="@color/black"
        android:textSize="6sp"
        app:layout_constraintBottom_toBottomOf="@+id/detailPrice"
        app:layout_constraintStart_toEndOf="@+id/detailPrice"
        app:layout_constraintTop_toTopOf="@+id/detailPrice" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/BulletPoint"
        android:textColor="@color/black"
        android:textSize="6sp"
        app:layout_constraintBottom_toBottomOf="@+id/detailCategory"
        app:layout_constraintStart_toEndOf="@+id/detailCategory"
        app:layout_constraintTop_toTopOf="@+id/detailCategory" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/reviews"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/reviewCount"
        app:layout_constraintStart_toEndOf="@+id/reviewCount"
        app:layout_constraintTop_toTopOf="@+id/reviewCount" />

    <TextView
        android:id="@+id/url"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/webSite"
        app:layout_constraintStart_toEndOf="@+id/webSite"
        app:layout_constraintTop_toTopOf="@+id/webSite"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="url " />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:clickable="false"
        android:contentDescription="@string/TODO"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2"
        app:srcCompat="@android:drawable/sym_call_outgoing"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/webSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/url"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider4" />

    <TextView
        android:id="@+id/point2s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/points"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/webSite"
        app:layout_constraintStart_toEndOf="@+id/webSite" />

    <TextView
        android:id="@+id/nameDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/detailHours"
        app:layout_constraintStart_toEndOf="@+id/detailHours"
        app:layout_constraintTop_toTopOf="@+id/detailHours"
        tools:text="Monday" />


</androidx.constraintlayout.widget.ConstraintLayout>